Se hacen ajustes al componente para actualizar ubicacion del trabajador

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,7 @@
+<div class="container my-5">
+    <div class="row justify-content-center">
+      <div class="col-lg-6">
+        <h1 class="text-center">Inicie Sesión</h1>
 <form [formGroup]="loginForm">
     <p class="text-danger">{{loginError}}</p>
     <div class="mb-3">
@@ -28,3 +32,6 @@
     </div>
     <button type="submit" (click)="login()" class="btn btn-primary">Iniciar Sesión</button>
 </form>
+</div>
+</div>
+</div>
