--- a/src/app/pages/localiza/trabajador/trabajador.component.html
+++ b/src/app/pages/localiza/trabajador/trabajador.component.html
@@ -1,28 +1,22 @@
-<div class="wrapper">
-    <button (click)="drawRoute()" class="btn-route">Dibujar Ruta</button>
-    <button (click)="testMarket()" class="btn-route">Marcador</button>
-  </div>
-  
-  <div class="wrapper">
+<h1 class="text-center">Actualice su Ubicación</h1>
+
+<div class="wrapper-trabajador">
     <div class="box-inputs">
       <div>
+        <!-- para que permita hacer busquedas de direccines en el mapa usando geocoder-->
         <div id="geocoder" #asGeoCoder class="geocoder"></div>
       </div>
   
       <div (click)="changeMode('start')" [ngClass]="{'active-way' : modeInput === 'start'}">
-        <div class="mock-label">Inicio</div>
+        <div class="mock-label">Ubicación</div>
         <div class="mock-input">{{wayPoints.start?.place_name}}</div>
       </div>
   
-      <div (click)="changeMode('end')" [ngClass]="{'active-way' : modeInput === 'end'}">
-        <div class="mock-label">Final</div>
-        <div class="mock-input">{{wayPoints.end?.place_name}}</div>
-      </div>
-  
     </div>
-  </div>
+</div>
   
-  <div class="wrapper">
-    <div id="map" #asMap class="map-container"></div>
-  </div>
+<div class="wrapper-trabajador">
+    <div id="map" #asMap class="map-container-trabajador"></div>
+</div>
+
   
