--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<div class="fixed-bottom">
-<app-footer></app-footer>
+<div class="main-container">
+    <app-header></app-header>
+    <app-nav></app-nav>
+    <div class="content-wrapper">
+        <router-outlet></router-outlet>
+    </div>
+    <div class="app-footer">
+        <app-footer></app-footer>
+    </div>
 </div>
-
-
