--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,20 +1,33 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Localizador</a>
+      <a class="navbar-brand">Localizador</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/inicio">Home</a>
+            <a class="nav-link" aria-current="page" routerLink="/inicio">Inicio</a>
           </li>
           <li *ngIf="!userLoginOn" class="nav-item">
-            <a class="nav-link" routerLink="/iniciar-sesion">Inicio Sesión</a>
+            <a class="nav-link active" routerLink="/iniciar-sesion">Inicio Sesión</a>
+          </li>
+          <li *ngIf="!userLoginOn" class="nav-item">
+            <a class="nav-link" routerLink="/registro" aria-disabled="true">Registrarse</a>
           </li>
           <li *ngIf="userLoginOn" class="nav-item">
-            <a class="nav-link" routerLink="/inicio" aria-disabled="true">Cerrar Sesión</a>
+            <a class="nav-link" routerLink="/ubicacion" aria-disabled="true">Mi Ubicación</a>
           </li>
+          <li *ngIf="userLoginOn" class="nav-item">
+            <a class="nav-link" routerLink="/perfil" aria-disabled="true">Mi Perfil</a>
+          </li>          
+          <li *ngIf="userLoginOn" class="nav-item">
+            <a class="nav-link" routerLink="/admin-contrato" aria-disabled="true">Administra Contratos</a>
+          </li>
+          <li *ngIf="userLoginOn" class="nav-item">
+            <a class="nav-link" routerLink="/" aria-disabled="true">Cerrar Sesión</a>
+          </li>
+          
         </ul>
       </div>
     </div>
