--- a/src/app/pages/localiza/trabajador/trabajador.component.html
+++ b/src/app/pages/localiza/trabajador/trabajador.component.html
@@ -1,6 +1,6 @@
 <h1 class="text-center">Actualice su Ubicación</h1>
 
-<div class="wrapper-trabajador">
+<div class="wrapper">
     <div class="box-inputs">
       <div>
         <!-- para que permita hacer busquedas de direccines en el mapa usando geocoder-->
@@ -11,12 +11,10 @@
         <div class="mock-label">Ubicación</div>
         <div class="mock-input">{{wayPoints.start?.place_name}}</div>
       </div>
-  
     </div>
+
 </div>
   
-<div class="wrapper-trabajador">
+<div class="wrapper">
     <div id="map" #asMap class="map-container-trabajador"></div>
 </div>
-
-  
