--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,7 +4,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 mt-2">
                     <p>
-                        Este sitio tiene como objetivo facilitar la distribución laboral de contratos a corto plazo para personas sin
+                        Este sitio tiene como objetivo facilitar la distribución laboral a corto plazo para personas sin
                         trabajo fijo y emprendedores, sitio web sin fines de lucro
                     </p>
                 </div>
