--- a/src/app/pages/localiza/trabajador/trabajador.component.css
+++ b/src/app/pages/localiza/trabajador/trabajador.component.css
@@ -1,67 +1,60 @@
 .map-container-trabajador {
-    width: 60%;
-    height: 500px;
-    border-radius: 1rem;
-    border: solid 10px white;
-    box-shadow: 0 12.5px 10px rgba(0, 0, 0, 0.035),
-    0 100px 80px rgba(0 , 0, 0, 0.07);
+  width: 62%;
+  height: 500px;
+  border-radius: 1rem;
+  border: solid 10px white;
+  box-shadow: 0 12.5px 10px rgba(0, 0, 0, 0.035),
+  0 100px 80px rgba(0 , 0, 0, 0.07);
 }
+
 .marker {
-    width: 50px;
-    height: 50px;
-    /*background-color: red;*/
-    background-image: url("../../../../assets/icons/maps-and-location.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-  }  
-  .box-inputs {
-    background-color: white;
-    width: 58%;
-    border-radius: .5rem;
-    border: solid 2px #00000008;
-    padding: 1rem;
-    box-shadow: 0 12.5px 10px rgba(0, 0, 0, 0.035),
-    0 100px 80px rgba(0, 0, 0, 0.07);
-  }
-  .mock-input {
-    background: white;
-    padding: .5rem;
-    margin-bottom: .5rem;
-    box-shadow: 0 0 10px #0000001a;
-    color: #808080;
-    min-height: 18px;
-  }
-  .mock-label {
-    padding: .25rem;
-    font-weight: 600;
-  }   
-.wrapper-trabajador{
-    padding: 2rem;
-    display: flex;
-    justify-content: center;
-  }
-  .geocoder, .mapboxgl-ctrl {
-    width: 100%;
-    max-width: 100%;
-    border-radius: 0;
-    background-color: white;
-  }
+  width: 50px;
+  height: 50px;
+  background-image: url("../../../../assets/icons/maps-and-location.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}  
+.box-inputs {
+  background-color: white;
+  width: 62%;
+  border-radius: .5rem;
+  border: solid 2px #00000008;
+  padding: 1rem;
+  box-shadow: 0 12.5px 10px rgba(0, 0, 0, 0.035),
+  0 100px 80px rgba(0, 0, 0, 0.07);
+}
+
+.mock-input {
+  background: white;
+  padding: .5rem;
+  margin-bottom: .5rem;
+  box-shadow: 0 0 10px #0000001a;
+  color: #808080;
+  min-height: 18px;
+}
+.mock-label {
+  padding: .25rem;
+  font-weight: 600;
+}
+
+ /** se paso .geocoder, .mapboxgl-ctrl al global */ 
+.geocoder {
+  margin-bottom: .5rem;
+} 
+
 .active-way {
-    border: solid 2px #09c509;
-    box-shadow: 0 0 10px #09c5094a;
+  border: solid 2px #09c509;
+  box-shadow: 0 0 10px #09c5094a;
 }  
 .btn-route {
-    background-color: white;
-    padding: .5rem 1rem;
-    border: solid 2px gray;
-  }
+  background-color: white;
+  padding: .5rem 1rem;
+  border: solid 2px gray;
+}
 
-
-  .geocoder {
-    margin-bottom: .5rem;
-  }
-
-
-
-
+.wrapper{
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+}
