--- a/src/app/pages/localiza/trabajador/trabajador.component.html
+++ b/src/app/pages/localiza/trabajador/trabajador.component.html
@@ -11,10 +11,19 @@
         <div class="mock-label">Ubicación</div>
         <div class="mock-input">{{wayPoints.start?.place_name}}</div>
       </div>
-    </div>
-
+      <div>
+        <div class="mock-label" >Longitud</div>
+        <div class="mock-input" >{{ubicacion.longitud}}</div>
+      </div>  
+      <div>
+        <div class="mock-label">Latitud</div>
+        <div class="mock-input">{{ubicacion.latitud}}</div>
+      </div>      
+    </div>     
 </div>
-  
 <div class="wrapper">
     <div id="map" #asMap class="map-container-trabajador"></div>
+</div>
+<div class="text-center">
+  <button type="submit" (click)="actualizaUbicacion()" class="btn btn-primary">Guardar</button>
 </div>
