--- a/src/app/auth/registro/registro.component.html
+++ b/src/app/auth/registro/registro.component.html
@@ -1,1 +1,104 @@
-<p>registro works!</p>
+<div class="container my-5">
+    <div class="row justify-content-center">
+      <div class="col-lg-6">
+        <h1 class="text-center">Registro de Usuario</h1>
+  
+        <form (ngSubmit)="registrarUsuario()" class="card p-4">
+          <!-- Estos campos están ocultos, así que no necesitan estructura de form-group -->
+          <input type="hidden" [(ngModel)]="usuario.id" name="id_usuario" />
+          <div class="form-group mb-3">
+            <label for="nombres">Nombres</label>
+            <input
+              type="text"
+              class="form-control"
+              [(ngModel)]="usuario.nombres"
+              name="nombres"
+              placeholder="Nombres completo"
+            />
+          </div>
+          <div class="form-group mb-3">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              [(ngModel)]="usuario.email"
+              name="nombres"
+              placeholder="Email"
+            />
+          </div>
+  
+          <div class="form-group mb-3">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              class="form-control"
+              [(ngModel)]="usuario.password"
+              name="password"
+              placeholder="******"
+            />
+          </div>
+  
+          <div class="form-group mb-3">
+            <label for="rol">Rol</label>
+            <select class="form-select" [(ngModel)]="usuario.rol" name="rol">
+                <option *ngFor="let rol of tiposRoles" [value]="rol.id">
+                  {{ rol.nombre }}
+                </option>
+            </select>
+          </div>
+  
+          <div class="form-group mb-3">
+            <label for="tipoidentificacion">Tipo Identificación</label>
+            <select class="form-select" [(ngModel)]="usuario.tipoIdentificacion" name="rol">
+                <option *ngFor="let tipo of tiposIdentificaciones" [value]="tipo.id">
+                  {{ tipo.nombre }}
+                </option>
+            </select>
+          </div>
+          <div class="form-group mb-3">
+            <label for="identificacion">Identificacion</label>
+            <input
+              type="text"
+              class="form-control"
+              [(ngModel)]="usuario.identificacion"
+              name="identificacion"
+              placeholder="0172621900"
+            />
+          </div>
+          <!-- Estos campos están ocultos, así que no necesitan estructura de form-group -->
+          <input type="hidden" [(ngModel)]="perfilTrabajo.id_perfil" name="id_perfil" />  
+          <div class="form-group mb-3">
+            <label for="profesion">Profesión</label>
+            <select class="form-select" [(ngModel)]="perfilTrabajo.profesion" name="profesion">
+                <option *ngFor="let profesion of profesiones" [value]="profesion.id">
+                  {{ profesion.nombre }}
+                </option>
+            </select>
+          </div>
+          <div class="form-group mb-3">
+            <label for="tiempoTrabajo">Tiempo Experiencia</label>
+            <input
+              type="text"
+              class="form-control"
+              [(ngModel)]="perfilTrabajo.tiempo_experiencia"
+              name="tiempoTrabajo"
+              placeholder="1 año 3 meses"
+            />
+          </div>
+          <div class="form-group mb-3">
+            <label for="introduccion">Actividades Profesionales</label>
+            <input
+              type="text"
+              class="form-control"
+              [(ngModel)]="perfilTrabajo.introduccion"
+              name="introduccion"
+              placeholder="introduccion"
+            />
+          </div>
+          <button type="submit" class="btn btn-primary mb-3">Guardar</button>
+          <button type="button" (click)="cancelarRegistro()" class="btn btn-secondary mb-3">Cancelar</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  
