--- a/src/app/pages/localiza/contrato/admincontrato/admincontrato.component.html
+++ b/src/app/pages/localiza/contrato/admincontrato/admincontrato.component.html
@@ -1,1 +1,45 @@
-<p>admincontrato works!</p>
+<div id="listadoContrato" class="container mt-3">
+  <div class="card">
+    <div class="card-header">
+      <h2 class="card-title">Mis Contratos</h2>
+    </div>
+    <div class="card-body">
+      <table class="table table-striped">
+        <thead class="thead-dark">
+          <tr>
+            <th>ID-CONTRATO</th>
+            <th>CONTRATANTE</th>
+            <th>ESTADO</th>
+            <th>TIPO CONTRATO</th>
+            <th>CONTRATADO</th>
+            <th>FECHA INICIO</th>
+            <th>FECHA FIN</th>
+            <th>DESCRIPCION DEL TRABAJO</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let contrato of contratos">
+            <td>{{ contrato.id_contrato }}</td>
+            <td>{{ contrato.id_usuario_contratante }}</td>
+            <td>{{ contrato.estado }}</td>
+            <td>{{ contrato.tipo_contrato }}</td>
+            <td>{{ contrato.id_usuario_trabajador }}</td>
+            <td>{{ contrato.fecha_inicio }}</td>
+            <td>{{ contrato.fecha_fin }}</td>
+            <td>{{ contrato.descripcion }}</td>
+
+            <td>
+              <button
+                class="btn btn-secondary"
+                (click)="editarContrato(contrato.id_contrato)"
+              >
+                Editar
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
