--- a/src/app/pages/localiza/perfil/perfil.component.html
+++ b/src/app/pages/localiza/perfil/perfil.component.html
@@ -22,7 +22,7 @@
                         <td>{{ perfil.tiempo_experiencia }}</td>
                         <td>{{ perfil.introduccion }}</td>
                         <td>
-                            <button class="btn btn-secondary"  (click)="editarPerfil(perfil.id_perfil)">Editar</button>
+                            <button class="btn btn-primary"  (click)="editarPerfil(perfil.id_perfil)">Editar</button>
                         </td>
                     </tr>
                 </tbody>
