--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -27,6 +27,9 @@
           <li *ngIf="userLoginOn" class="nav-item">
             <a class="nav-link" routerLink="/historico-contrato" aria-disabled="true">Contratos Historico</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/califica-contrato" aria-disabled="true">Calificar Contratos</a>
+          </li>
           <li *ngIf="userLoginOn" class="nav-item">
             <a class="nav-link" [routerLink]="['/inicio', { outsesion: 'outsesion' }]" aria-disabled="true">Cerrar Sesión</a>
           </li>
