--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -7,28 +7,28 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLink="/inicio">Inicio</a>
+            <a class="nav-link" aria-current="page" routerLink="/inicio" routerLinkActive="active">Inicio</a>
           </li>
           <li *ngIf="!userLoginOn" class="nav-item">
-            <a class="nav-link active" routerLink="/iniciar-sesion">Inicio Sesión</a>
+            <a class="nav-link" routerLink="/iniciar-sesion" routerLinkActive="active">Inicio Sesión</a>
           </li>
           <li *ngIf="!userLoginOn" class="nav-item">
-            <a class="nav-link" routerLink="/registro" aria-disabled="true">Registrarse</a>
+            <a class="nav-link" routerLink="/registro" aria-disabled="true" routerLinkActive="active">Registrarse</a>
           </li>
           <li *ngIf="userLoginOn" class="nav-item">
-            <a class="nav-link" routerLink="/ubicacion" aria-disabled="true">Mi Ubicación</a>
+            <a class="nav-link" routerLink="/ubicacion" aria-disabled="true" routerLinkActive="active">Mi Ubicación</a>
           </li>
           <li *ngIf="userLoginOn" class="nav-item">
-            <a class="nav-link" routerLink="/perfil" aria-disabled="true">Mi Perfil</a>
+            <a class="nav-link" routerLink="/perfil" aria-disabled="true" routerLinkActive="active">Mi Perfil</a>
           </li>          
           <li *ngIf="userLoginOn" class="nav-item">
-            <a class="nav-link" routerLink="/admin-contrato" aria-disabled="true">Administrar Contratos Vigente</a>
+            <a class="nav-link" routerLink="/admin-contrato" aria-disabled="true" routerLinkActive="active">Administrar Contratos Vigente</a>
           </li>
           <li *ngIf="userLoginOn" class="nav-item">
-            <a class="nav-link" routerLink="/historico-contrato" aria-disabled="true">Contratos Historico</a>
+            <a class="nav-link" routerLink="/historico-contrato" aria-disabled="true" routerLinkActive="active">Contratos Historico</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/califica-contrato" aria-disabled="true">Calificar Contratos</a>
+            <a class="nav-link" routerLink="/califica-contrato" aria-disabled="true" routerLinkActive="active">Calificar Contratos</a>
           </li>
           <li *ngIf="userLoginOn" class="nav-item">
             <a class="nav-link" [routerLink]="['/inicio', { outsesion: 'outsesion' }]" aria-disabled="true">Cerrar Sesión</a>
