ajuste de titulo

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="jumotron bg-cover text-white">
     <div class="container py-5 text-center">
         <h1 class="display-4 font-weight-bold">Soluciones Inmediatas</h1>
-        <h1 class="display-4 font-weight-bold">Conectamos Expertos de su area. Sin Esperas.</h1>
+        <h1 class="display-4 font-weight-bold">Conectamos Expertos de su area.</h1>
         
     </div>
 </header>
